[package]
name = "wodencja"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-lc-rs = "1.13"
axum = "0.8"
futures-util = { version = "0", default-features = false, features = ["alloc"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0" }
once_cell = "1.21"
rustls = "0.23"
rustls-pemfile = "2.2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tower = { version = "0", features = ["make"] }
tower-http = { version = "0.6", features = ["compression-full", "decompression-full", "fs", "trace"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
